Bug 1742229 - Firefox doesn't use modifiers for YUV surfaces r=stransky

Firefox is not setting the modifiers for YUV surfaces causing the import of surfaces that require them to fail.

Differential Revision: https://phabricator.services.mozilla.com/D131772